// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Cart renders correctly if there are NO items in cart 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
}

.c4:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
}

.c8:last-child {
  margin-bottom: 0;
}

.c3 {
  margin: 0 auto;
  width: 100rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 1rem;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  margin: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  font-weight: bold;
  margin-left: 1rem;
}

.c10 {
  color: #008484;
  font-weight: 700;
  font-size: 1.8rem;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
  background: none;
  border: 0;
  cursor: pointer;
}

.c10:focus {
  background-color: #ffbf47;
  outline: 4px solid #ffbf47;
  outline-offset: 0;
}

<article
  className="c0"
>
  <section
    className="c1"
  >
    <h1
      className="c2"
    >
      Cart (0)
    </h1>
    <CartItemsList
      items={Array []}
    />
    <section
      className="c3"
    >
      <h3
        className="c4"
      >
        Item can only be shipped Standard
      </h3>
      <div
        className="c5"
      >
        <svg
          height="27"
          width="44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M35.631 22.095a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0zm-21.08 0a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"
            fill="#b0b0b0"
          />
          <path
            d="M4.554 22.039H.18V.491h28.384v3.377h7.978l7.255 18.171h-7.169c-.03-3.007-2.484-5.444-5.497-5.444s-5.467 2.437-5.497 5.444H15.548c-.03-3.007-2.484-5.444-5.497-5.444s-5.467 2.437-5.497 5.444zm26.577-4.444a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9zm-21.08 0a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9z"
            fill="#b0b0b0"
          />
        </svg>
        <div
          className="c6"
        >
          <p
            className="c7"
          >
            Ship to Me
          </p>
          <span
            className="c8"
          >
            Arrives
          </span>
          <span
            className="c9"
          >
            Tue, Apr 16 - Fri, Apr 19
          </span>
        </div>
      </div>
    </section>
    <button
      className="c10"
      onClick={[MockFunction]}
    >
      Put some items in cart!
    </button>
  </section>
</article>
`;

exports[`COMPONENT - Cart renders correctly if there are some items in cart 1`] = `
Array [
  <InfoBanner>
    You have received 
    <strong>
      free shipping
    </strong>
    !
  </InfoBanner>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
}

.c4:last-child {
  margin-bottom: 0;
}

.c8 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
}

.c8:last-child {
  margin-bottom: 0;
}

.c3 {
  margin: 0 auto;
  width: 100rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 1rem;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  margin: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  font-weight: bold;
  margin-left: 1rem;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Cart (3)
      </h1>
      <CartItemsList
        items={
          Array [
            Object {
              "id": "64a673c2-59e3-11e9-8647-d663bd873d93",
              "imgUrl": "https://mosaic03.ztat.net/vgs/media/catalog_hd/LE/42/2T/01/0K/11/LE422T010-K11@8.1.jpg",
              "name": "RIDER JACKET - jeans jacket - dark blue",
              "price": Object {
                "discount": 12500,
                "regular": 24099,
              },
              "quantity": 3,
              "variants": Object {
                "color": "Dark Blue",
                "size": "46 Medium",
              },
            },
          ]
        }
      />
      <section
        className="c3"
      >
        <h3
          className="c4"
        >
          Item can only be shipped Standard
        </h3>
        <div
          className="c5"
        >
          <svg
            height="27"
            width="44"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M35.631 22.095a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0zm-21.08 0a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"
              fill="#b0b0b0"
            />
            <path
              d="M4.554 22.039H.18V.491h28.384v3.377h7.978l7.255 18.171h-7.169c-.03-3.007-2.484-5.444-5.497-5.444s-5.467 2.437-5.497 5.444H15.548c-.03-3.007-2.484-5.444-5.497-5.444s-5.467 2.437-5.497 5.444zm26.577-4.444a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9zm-21.08 0a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9z"
              fill="#b0b0b0"
            />
          </svg>
          <div
            className="c6"
          >
            <p
              className="c7"
            >
              Ship to Me
            </p>
            <span
              className="c8"
            >
              Arrives
            </span>
            <span
              className="c9"
            >
              Tue, Apr 16 - Fri, Apr 19
            </span>
          </div>
        </div>
      </section>
    </section>
    <OrderSummary />
    <NextStep
      label="Checkout"
      to="/checkout/delivery"
    />
  </article>,
]
`;
